<resources>
    <string name="app_name">圖書管理系統(用戶版)</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="input_username">請輸入登錄帳號</string>
    <string name="input_password">請輸入登錄密碼</string>

    <string name="empty_username">用戶名稱置空</string>
    <string name="empty_password">密碼置空</string>

    <string name="remember_password">記住密碼</string>
    <string name="setting">配置接口</string>
    <string name="login">登錄</string>

    <string name="current_api">當前接口</string>
    <string name="api_address">新接口地址</string>
    <string name="input_api_address">請輸入接口地址</string>

    <string name="confirm">確定</string>

    <string name="book_listing">圖書列表</string>

    <string name="call_number">索書號</string>

    <string name="author">著者</string>
    <string name="publisher">出版社</string>

    <string name="instock">在架</string>
    <string name="borrowed">外借</string>

    <string name="description">描述/備註</string>
    <string name="publisher_date">出版日期</string>
    <string name="category">類別</string>

    <string name="menu_search">搜尋圖書</string>
    <string name="menu_stocktake">盤點列表</string>
    <string name="menu_profile">個人紀錄</string>


    <string name="admin_setting_language_wrap">語言</string>
    <string name="admin_setting_language_change">切換語言</string>

    <string name="admin_setting_wrap">設置</string>
    <string name="admin_setting_api">配口設置</string>
    <string name="admin_setting_change_password">修改登錄密碼</string>

    <string name="logout">退出登錄</string>

    <string name="admin_setting_welcome">歡迎 %s 登陸使用</string>

    <string name="stocktake_progress">盤點進度</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">截至日期</string>
    <string name="create_date">創建日期</string>

    <string name="stocking">盤點中</string>

    <string name="book_detail">圖書詳情</string>

    <string name="keywords">關鍵詞</string>
    <string name="search_history">搜索歷史</string>

    <string name="all">所有</string>
    <string name="stocktake">已盤點</string>
    <string name="missing">尋找中</string>
    <string name="other">其他</string>

    <string name="start">開始</string>
    <string name="stop">停止</string>

    <string name="change_password">修改登錄密碼</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <string name="original_passowrd">原密碼</string>
    <string name="new_password">新密碼</string>
    <string name="confirm_password">確認密碼</string>

    <string name="plz_original_passowrd">請輸入原密碼</string>
    <string name="plz_new_password">請輸入新密碼</string>
    <string name="plz_confirm_password">請輸入確認密碼</string>

    <string name="confirm_password_incorrect">原密碼和確認密碼不符</string>
    <string name="wrong_password">密碼錯誤</string>
    <string name="same_password">新密碼和原本密碼相同</string>
    <string name="password_at_least_eight">密碼至少八位數字</string>

    <!-- 在庫不在庫-->
    <string name="stocktake_instock">在庫</string>
    <string name="stocktake_not_instock">不在庫</string>


    <string name="password_incorrect">密碼錯誤</string>
    <string name="user_not_exists">用戶不存在</string>

    <string name="no_internet_connection">無法連接伺服器</string>

    <string name="tchinese">繁體中文</string>
    <string name="schinese">简体中文</string>
    <string name="english">English</string>

    <string name="start_downloading">開始啟動下載</string>

    <string name="finish_stocktaking">完成盤點</string>
    <string name="delete_stocktaking">刪除盤點</string>
    <string name="select_all">全選</string>

    <string name="stock_take_uploaded">盤點資料已經上傳</string>

    <string name="advanced_search">高級搜索</string>
    <string name="location">地點</string>
    <string name="reset">重設</string>
    <string name="search">搜尋</string>
    <string name="filtering">篩選</string>
    <string name="plz_keyword">請輸入關鍵字</string>

    <string name="reserve">預約</string>
    <string name="already_borrowed">已借出</string>

    <string name="reserved">已預約</string>
    <string name="return_date">歸還日期</string>
    <string name="borrowed_date">租借日期</string>
    <string name="appointment_date">預約日期</string>

    <string name="success">成功</string>

    <string name="reach_skip_limit">爽約次數已達上限</string>
    <string name="reach_appointmentt_limit">預約次數已達上限</string>
    <string name="reach_reserved">書籍已經被預約</string>
    <string name="reach_borrowed">書籍已被借出</string>


    <string name="renew">可續借</string>
    <string name="reserved_by_others">被預約</string>

    <string name="go_renew">續借</string>
    <string name="confirm_renew_book">確認續借這本書?</string>

    <string name="renew_success">續借成功</string>
    <string name="renew_partial_success">部分續借成功</string>
    <string name="renew_failure">續借失敗</string>

</resources>