<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="#F5F5F5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:background="@color/color_primary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22dp"
                android:text="@string/advanced_search"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="12dp"
                android:layout_margin="10dp"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/keywords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

                <EditText
                    android:id="@+id/input_api_address"
                    android:hint="@string/plz_keyword"
                    android:gravity="left|center_vertical"
                    android:background="#00000000"
                    android:textColor="@android:color/black"
                    android:textSize="13dp"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"/>


            </LinearLayout>

            <TextView
                android:textSize="12dp"
                android:layout_margin="10dp"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/filtering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/category_header"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/category"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

            <com.nex3z.flowlayout.FlowLayout
                android:visibility="gone"
                android:id="@+id/category_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.nex3z.flowlayout.FlowLayout >

            <LinearLayout
                android:id="@+id/location_header"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

            <com.nex3z.flowlayout.FlowLayout
                android:visibility="gone"
                android:id="@+id/location_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.nex3z.flowlayout.FlowLayout>

            <LinearLayout
                android:id="@+id/author_header"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/author"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

            <com.nex3z.flowlayout.FlowLayout
                android:visibility="gone"
                android:id="@+id/author_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.nex3z.flowlayout.FlowLayout>

            <LinearLayout
                android:id="@+id/publisher_header"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/publisher"
                    android:textStyle="bold"
                    android:textColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>


            <com.nex3z.flowlayout.FlowLayout
                android:visibility="gone"
                android:id="@+id/publisher_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.nex3z.flowlayout.FlowLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/search_panel_reset"
            android:text="@string/reset"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/search_panel_search"
            android:text="@string/search"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/color_primary"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>