<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="#F5F5F5"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:background="#F5F5F5"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:text="@string/current_api"
            android:textColor="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=" : "
            android:textColor="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/current_api_address"
            android:text=""
            android:textColor="@android:color/darker_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/api_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <EditText
                android:id="@+id/input_api_address"
                android:hint="@string/input_api_address"
                android:gravity="left|center_vertical"
                android:background="#00000000"
                android:textColor="@android:color/black"
                android:textSize="13dp"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>


            <EditText
                android:id="@+id/company_id"
                android:visibility="gone"
                android:background="#00000000"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
</LinearLayout>